# comfylock

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  model_compat_report.yml
.github/workflows/: ci.yml  labeler.yml  release.yml  stale.yml
assets/: demo.tape
comfylock/: __init__.py  audit.py  cli.py  completions.py  config.py  diff.py  doctor.py  enrich.py  fetcher.py  gc.py  hashes.py  init.py  inspect.py  jsonout.py  manager_import.py  merge.py  model.py  pack.py  progress.py  report.py  scan.py  selftest.py  serialize.py  sign.py  sync.py  unpack.py  update.py  verify.py  workflow.py
comfylock/exporters/: __init__.py  docker_compose.py  dockerfile.py  json_schema.py  manager_snapshot.py  markdown.py  requirements.py  shell.py
discussions/: starter_ideas.md  starter_qa.md  starter_show_and_tell.md
docs/: audit.md  ci-cd.md  docker.md  doctor.md  getting-started.md  lockfile-schema.md  manager-interop.md  pre-commit.md  record-demo.md  security.md  shell-completions.md  signed-locks.md
examples/: workflow.flow.json
panel/: __init__.py
panel/web/: comfylock.js
schema/: comfylock-v2.schema.json
scripts/: check_readme_links.py
tests/: test_cli.py  test_core.py  test_v030.py  test_v040.py  test_v041.py
