[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "comfylock"
version = "0.3.0"
description = "Reproducibility lockfile for ComfyUI workflows - pip freeze for ComfyUI."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "ComfyLock contributors" }]
keywords = [
  "comfyui",
  "lockfile",
  "reproducibility",
  "stable-diffusion",
  "workflow",
  "huggingface",
  "civitai",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/theot44240-tech/comfylock"
Repository = "https://github.com/theot44240-tech/comfylock"
Issues = "https://github.com/theot44240-tech/comfylock/issues"
Changelog = "https://github.com/theot44240-tech/comfylock/blob/main/CHANGELOG.md"

[project.optional-dependencies]
yaml = ["pyyaml>=5.1"]
blake3 = ["blake3>=0.3"]
hf = ["huggingface_hub>=0.20"]
rich = ["rich>=13"]
sigstore = ["sigstore>=2"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.1", "mypy>=1.0", "pyyaml>=5.1", "jsonschema>=4"]

[project.scripts]
comfy-lock = "comfylock.cli:main"
comfylock = "comfylock.cli:main"

[tool.setuptools]
packages = ["comfylock", "comfylock.exporters"]

[tool.setuptools.package-data]
comfylock = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = false

[tool.coverage.run]
# selftest.py is itself an offline test harness (run as its own CI step), and
# __main__.py is a one-line shim; both are exercised but not via pytest.
omit = ["comfylock/selftest.py", "comfylock/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
